// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styleguideTextStyleNotificationHandler getTeamsMessage method for created notification should match snapshot when there are more than 1 events 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**2 text styles** are added in _styleguideName_! 🏃‍♂",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "Make sure your stylesheets are up to date!",
          "spacing": "none"
        }
      ]
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://textStyles?stid=styleguideId&tsids=textStyleId,anotherTextStyleId"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/styleguide/styleguideId/styleguide/textstyles?tsid=textStyleId&tsid=anotherTextStyleId"
        }
      ]
    }
  ]
}
`;

exports[`styleguideTextStyleNotificationHandler getTeamsMessage method for created notification should match snapshot when there is only 1 event 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**textStyleName** is added in _styleguideName_! 🏃‍♂",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "Make sure your stylesheets are up to date!",
          "spacing": "none"
        }
      ]
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://textStyles?stid=styleguideId&tsids=textStyleId"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/styleguide/styleguideId/styleguide/textstyles?tsid=textStyleId"
        }
      ]
    }
  ]
}
`;

exports[`styleguideTextStyleNotificationHandler getTeamsMessage method for updated notification should match snapshot when there are more than 1 events 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**2 text styles** are updated in _styleguideName_! 🏃‍♂",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "Make sure your stylesheets are up to date!",
          "spacing": "none"
        }
      ]
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://textStyles?stid=styleguideId&tsids=textStyleId,anotherTextStyleId"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/styleguide/styleguideId/styleguide/textstyles?tsid=textStyleId&tsid=anotherTextStyleId"
        }
      ]
    }
  ]
}
`;

exports[`styleguideTextStyleNotificationHandler getTeamsMessage method for updated notification should match snapshot when there is only 1 event 1`] = `
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "type": "AdaptiveCard",
  "version": "1.2",
  "body": [
    {
      "type": "TextBlock",
      "text": "**textStyleName** is updated in _styleguideName_! 🏃‍♂",
      "wrap": true,
      "spacing": "small"
    },
    {
      "type": "Container",
      "spacing": "extraLarge",
      "items": [
        {
          "type": "TextBlock",
          "text": "Make sure your stylesheets are up to date!",
          "spacing": "none"
        }
      ]
    },
    {
      "type": "ActionSet",
      "spacing": "extraLarge",
      "actions": [
        {
          "type": "Action.OpenUrl",
          "title": "Open in App",
          "url": "zpl://textStyles?stid=styleguideId&tsids=textStyleId"
        },
        {
          "type": "Action.OpenUrl",
          "title": "Open in Web",
          "url": "https://app.zeplin.io/styleguide/styleguideId/styleguide/textstyles?tsid=textStyleId"
        }
      ]
    }
  ]
}
`;
